# xbox-cloud-statistics

./: .gitignore  README.md  config.toml  meta.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_backend.yml  ci_frontend.yml  deploy.yml  run.yml
backend/: .gitignore  README.md  config.toml  pyproject.toml
backend/xbox_cloud_statistics/: client.py  config.py  main.py  models.py
backend/xbox_cloud_statistics/io/: cli.py  influxdb.py  io.py  json.py
common/: config.py
frontend/: .eslintrc.json  .gitignore  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
frontend/assets/css/: tailwind.css
frontend/components/: Chart.vue  Footer.vue
frontend/composables/: useDate.ts  useMeta.ts  useResults.ts  useTitle.ts
frontend/modules/body-content/: index.ts  transformer.ts
frontend/pages/: index.vue
frontend/pages/games/: [[game]].vue
frontend/site_generator/: main.py
frontend/site_generator/providers/: css.py  font.py  js.py  provider.py
frontend/site_generator/templates/: base.html  chart.html  game.html  index.html  tailwind.css  templates.py
games/ARK/AustraliaEast/: GPU.json
games/ARK/AustraliaSouthEast/: GPU.json
games/ARK/BrazilSouth/: GPU.json
games/ARK/EastUS/: GPU.json
games/ARK/EastUS2/: GPU.json
games/ARK/JapanEast/: GPU.json
games/ARK/KoreaCentral/: GPU.json
games/ARK/NorthCentralUs/: GPU.json
games/ARK/SouthCentralUS/: GPU.json
games/ARK/UKSouth/: GPU.json
games/ARK/WestEurope/: GPU.json
games/ARK/WestUS/: GPU.json
games/ARK/WestUS2/: GPU.json
games/ASSASSINSCREEDODYSSEY/AustraliaEast/: GPU.json
games/ASSASSINSCREEDODYSSEY/AustraliaSouthEast/: GPU.json
games/ASSASSINSCREEDODYSSEY/BrazilSouth/: GPU.json
games/ASSASSINSCREEDODYSSEY/EastUS/: GPU.json
games/ASSASSINSCREEDODYSSEY/EastUS2/: GPU.json
games/ASSASSINSCREEDODYSSEY/JapanEast/: GPU.json
games/ASSASSINSCREEDODYSSEY/KoreaCentral/: GPU.json
games/ASSASSINSCREEDODYSSEY/NorthCentralUs/: GPU.json
games/ASSASSINSCREEDODYSSEY/SouthCentralUS/: GPU.json
games/ASSASSINSCREEDODYSSEY/UKSouth/: GPU.json
games/ASSASSINSCREEDODYSSEY/WestEurope/: GPU.json
games/ASSASSINSCREEDODYSSEY/WestUS/: GPU.json
games/ASSASSINSCREEDODYSSEY/WestUS2/: GPU.json
games/ASSASSINSCREEDORIGINS/AustraliaEast/: GPU.json
games/ASSASSINSCREEDORIGINS/AustraliaSouthEast/: GPU.json
games/ASSASSINSCREEDORIGINS/BrazilSouth/: GPU.json
games/ASSASSINSCREEDORIGINS/EastUS/: GPU.json
games/ASSASSINSCREEDORIGINS/EastUS2/: GPU.json
games/ASSASSINSCREEDORIGINS/JapanEast/: GPU.json
games/ASSASSINSCREEDORIGINS/KoreaCentral/: GPU.json
games/ASSASSINSCREEDORIGINS/NorthCentralUs/: GPU.json
games/ASSASSINSCREEDORIGINS/SouthCentralUS/: GPU.json
games/ASSASSINSCREEDORIGINS/UKSouth/: GPU.json
games/ASSASSINSCREEDORIGINS/WestEurope/: GPU.json
games/ASSASSINSCREEDORIGINS/WestUS/: GPU.json
games/ASSASSINSCREEDORIGINS/WestUS2/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/AustraliaEast/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/AustraliaSouthEast/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/BrazilSouth/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/EastUS/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/EastUS2/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/JapanEast/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/KoreaCentral/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/NorthCentralUs/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/SouthCentralUS/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/UKSouth/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/WestEurope/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/WestUS/: GPU.json
games/BATTLEFIELD2042XBOXSERIESXS/WestUS2/: GPU.json
games/CARMECHANICSIMULATOR2021/AustraliaEast/: GPU.json
games/CARMECHANICSIMULATOR2021/AustraliaSouthEast/: GPU.json
games/CARMECHANICSIMULATOR2021/BrazilSouth/: GPU.json
games/CARMECHANICSIMULATOR2021/EastUS/: GPU.json
games/CARMECHANICSIMULATOR2021/EastUS2/: GPU.json
games/CARMECHANICSIMULATOR2021/JapanEast/: GPU.json
games/CARMECHANICSIMULATOR2021/KoreaCentral/: GPU.json
games/CARMECHANICSIMULATOR2021/NorthCentralUs/: GPU.json
games/CARMECHANICSIMULATOR2021/SouthCentralUS/: GPU.json
games/CARMECHANICSIMULATOR2021/UKSouth/: GPU.json
games/CARMECHANICSIMULATOR2021/WestEurope/: GPU.json
games/CARMECHANICSIMULATOR2021/WestUS/: GPU.json
games/CARMECHANICSIMULATOR2021/WestUS2/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/AustraliaEast/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/AustraliaSouthEast/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/BrazilSouth/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/EastUS/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/EastUS2/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/JapanEast/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/KoreaCentral/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/NorthCentralUs/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/SouthCentralUS/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/UKSouth/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/WestEurope/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/WestUS/: GPU.json
games/EASPORTSFIFA23XBOXSERIESXS/WestUS2/: GPU.json
games/FARCRY5/AustraliaEast/: GPU.json
games/FARCRY5/AustraliaSouthEast/: GPU.json
games/FARCRY5/BrazilSouth/: GPU.json
games/FARCRY5/EastUS/: GPU.json
games/FARCRY5/EastUS2/: GPU.json
games/FARCRY5/JapanEast/: GPU.json
games/FARCRY5/KoreaCentral/: GPU.json
games/FARCRY5/NorthCentralUs/: GPU.json
games/FARCRY5/SouthCentralUS/: GPU.json
games/FARCRY5/UKSouth/: GPU.json
games/FARCRY5/WestEurope/: GPU.json
games/FARCRY5/WestUS/: GPU.json
games/FARCRY5/WestUS2/: GPU.json
games/FARMINGSIMULATOR22/EastUS/: GPU.json
site_generator/: config.py  main.py
site_generator/providers/: provider.py
site_generator/templates/: base.html  discontinuation.html  game.html  tailwind.config.js  templates.py
xbox_cloud_statistics/: client.py  config.py  main.py
xbox_cloud_statistics/io/: cli.py  influxdb.py  io.py
xbox_cloud_statistics/scripts/: authenticate.py  json2influxdb.py
(+298 files in other folders)
