[tool.poetry]
name = "xbox-cloud-statistics"
version = "0.1.0"
description = ""
authors = ["nthumann <me@n-thumann.de>"]
readme = "README.md"
packages = [{include = "xbox_cloud_statistics"}]

[tool.poetry.dependencies]
python = "^3.11"
msal = "^1.31.0"
httpx = {extras = ["http2"], version = "^0.27.2"}
tabulate = "^0.9.0"
influxdb-client = "^1.47.0"
jinja2 = "^3.1.4"
pytailwindcss = "^0.2.0"

[tool.poetry.group.dev.dependencies]
types-tabulate = "^0.9.0.20240106"
ruff = "^0.7.1"
black = "^24.10.0"
toml-sort = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xbox-cloud-statistics = 'xbox_cloud_statistics.main:run'
xbox-cloud-authenticate = 'xbox_cloud_statistics.scripts.authenticate:run'
xbox-cloud-json2influxdb = 'xbox_cloud_statistics.scripts.json2influxdb:run'
site-generator = 'site_generator.main:main'