[tool.poetry]
name = "xbox-cloud-statistics"
version = "0.1.0"
description = ""
authors = ["nthumann <me@n-thumann.de>"]
readme = "README.md"
packages = [{include = "xbox_cloud_statistics"}]

[tool.poetry.dependencies]
python = "^3.11"
msal = "^1.28.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
types-tabulate = "^0.9.0.20240106"
mypy = "^1.9.0"
ruff = "^0.3.4"
black = "^24.3.0"
toml-sort = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "I001" # unsorted-imports
]

[tool.poetry.scripts]
xbox-cloud-statistics = 'xbox_cloud_statistics.main:run'
xbox-cloud-authenticate = 'xbox_cloud_statistics.scripts.authenticate:run'