[tool.poetry]
name = "site-generator"
version = "0.1.0"
description = ""
authors = ["Nicolas Thumann <me@n-thumann.de>"]
readme = "README.md"
packages = [{include = "site_generator"}]

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pytailwindcss = "^0.2.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
site-generator = 'site_generator.main:main'

[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
